# CXKJ_Project

./: CMakeLists.txt  README.md
NTPClient/: CMakeLists.txt  dependencies
NTPClient/doc/: Makefile  Makefile.mk  main.cpp
NTPClient/doc/NTPServer/: windows.txt
NTPClient/src/: VxDType.h  VxNtpHelper.cpp  VxNtpHelper.h  main.cpp
cmake/: CXKJOProjectConfig.cmake.in  CXKJOProjectMacros.cmake  CXX1x.cmake  FindOpenSSL.cmake
crashrpt/: CMakeLists.txt  CXKJCrashrpt.pc.in
crashrpt/cmake/: CXKJCrashrptConfig.cmake
crashrpt/doc/: CrashRpt.xmind  config.json  config注释.json
crashrpt/src/: defline.h  main.cpp
